<resources>
    <string name="app_name">LiteGitHub</string>
    <string name="login">Sign in</string>
    <string name="password">Password</string>
    <string name="account">Username or email address</string>
    <string name="no_account">New to GitHub? Create an account.</string>
    <string name="home">Home</string>
    <string name="tree">Tree</string>
    <string name="project">Project</string>
    <string name="navigation">Navi</string>
    <string name="collection">Collect</string>
    <string name="login_name">Login</string>
    <string name="menu_navi_collection">Collection</string>
    <string name="menu_navi_night">Night</string>
    <string name="menu_navi_settings">Settings</string>
    <string name="menu_navi_about">About</string>
</resources>
