<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/menu_navi_collection"
            android:icon="@drawable/ic_menu_navi_collection"
            android:title="@string/menu_navi_collection" />

        <item
            android:id="@+id/menu_navi_night"
            android:icon="@drawable/ic_menu_navi_night"
            android:title="@string/menu_navi_night" />

        <item
            android:id="@+id/menu_navi_settings"
            android:icon="@drawable/ic_menu_navi_settings"
            android:title="@string/menu_navi_settings" />

        <item
            android:id="@+id/menu_navi_about"
            android:icon="@drawable/ic_menu_navi_about"
            android:title="@string/menu_navi_about" />


    </group>

</menu>